// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E JSX 1`] = `
"import testImg from \\"../assets/test.svg\\"
const a = <><img src={testImg} alt=\\"\\" /></>"
`;

exports[`E2E JSX with image size 1`] = `
"import testImg from \\"../assets/test.png\\"
const a = <><img src={testImg} width=\\"114\\" height=\\"514\\" alt=\\"\\" /></>"
`;

exports[`E2E JSX with image size and dpi 1`] = `
"import testImg from \\"../assets/test@2.png\\"
const a = <><img src={testImg} width=\\"57\\" height=\\"257\\" alt=\\"\\" /></>"
`;

exports[`E2E Missing expr 1`] = `
"import testImg from \\"../assets/test.svg\\"
const a = testImg"
`;

exports[`E2E Missing expr multi byte 1`] = `
"import testImg from \\"../assets/test.svg\\"
const 中文 = testImg"
`;

exports[`E2E Missing multi 1`] = `
"import testImg from \\"../assets/test.svg\\"
const a = testImg
const b: string = "
`;

exports[`E2E Missing multi, location 2 1`] = `
"import testImg from \\"../assets/test.svg\\"
const a = 
const b: string = testImg"
`;
